fixed buttons not being aligned in controlboard

--- a/src/themes/football/football.css
+++ b/src/themes/football/football.css
@@ -28,6 +28,10 @@
   margin-top: 0.5%;
 }
 
+.buttons {
+  padding-bottom: 20px;
+}
+
 .background{
   position: absolute;
   z-index: -2;
