--- a/src/themes/hokey/hokey.css
+++ b/src/themes/hokey/hokey.css
@@ -8,9 +8,6 @@ background-color: rgba(134, 115, 156, 0.479);
 .screenInfos{
 background-size: 10%;
 }
-.start{
-    margin-left: 30vw;
-}
 
 
 .textStyle{
